fix(repo): docker adjust 4

--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -1,62 +1,43 @@
+# Use the node:22-alpine image as the base for all stages
 FROM node:22-alpine AS base
+# Globally install pnpm and turbo for use in later stages
+# Using --silent to reduce log output and potential memory issues on platforms like Railway
+RUN npm install -g pnpm@10.10.0 --silent
+RUN npm install -g turbo --silent
 
-# Install pnpm directly via npm (more reliable for Railway)
-RUN npm install -g pnpm@10.10.0
-
-# Setup pnpm environment for global packages
-ENV PNPM_HOME="/root/.local/share/pnpm"
-ENV PATH="$PNPM_HOME:$PATH"
-RUN mkdir -p $PNPM_HOME
-
+# The 'builder' stage is responsible for creating a pruned, minimal version of the monorepo
 FROM base AS builder
-
-RUN apk update
-RUN apk add --no-cache libc6-compat bash curl
-# Set working directory
 WORKDIR /app
-
-# Install turbo globally
-RUN pnpm install -g turbo
-
-# Copy workspace configuration files first
-COPY package.json pnpm-lock.yaml pnpm-workspace.yaml turbo.json ./
-COPY apps/server/package.json ./apps/server/package.json
-COPY packages/ ./packages/
-
-# Copy remaining files needed for the build
+# Copy the entire monorepo context into the builder
 COPY . .
-
+# Use 'turbo prune' to create a minimal workspace containing only the server app and its dependencies
 RUN turbo prune @workspace/server --docker
 
-# Add lockfile and package.json's of isolated subworkspace
+# The 'installer' stage installs dependencies and builds the application
 FROM base AS installer
-RUN apk update
-RUN apk add --no-cache libc6-compat
 WORKDIR /app
-
-# First install the dependencies (as they change less often)
+# Copy the pruned dependency definitions (package.json files) from the builder stage
 COPY --from=builder /app/out/json/ .
-# Install with Railway-optimized settings
-RUN pnpm install --no-frozen-lockfile --prefer-offline
-
-# Build the project
+# Copy the pruned lockfile
+COPY --from=builder /app/out/pnpm-lock.yaml ./
+# Install dependencies based on the pruned lockfile
+RUN pnpm install --frozen-lockfile
+# Copy the rest of the pruned source code required for the build
 COPY --from=builder /app/out/full/ .
+# Build the server application
+RUN pnpm --filter @workspace/server run build
 
-RUN pnpm turbo build --filter=@workspace/server
-
+# The 'runner' stage creates the final, lightweight production image
 FROM base AS runner
-
 WORKDIR /app
-
-# Don't run production as root
+# Create a non-root user for security
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 hono
-
-# Copy only what's needed to run the application
+# Copy the build output and production dependencies from the installer stage
+COPY --from=installer --chown=hono:nodejs /app/apps/server/dist ./dist
 COPY --from=installer --chown=hono:nodejs /app/node_modules ./node_modules
-COPY --from=installer --chown=hono:nodejs /app/apps/server/dist ./apps/server/dist
-COPY --from=installer --chown=hono:nodejs /app/apps/server/package.json ./apps/server/package.json
-
+COPY --from=installer --chown=hono:nodejs /app/apps/server/package.json .
+# Set the user for the running container
 USER hono
-
-CMD ["node", "apps/server/dist/src/index.js"]
+# The command to start the server application
+CMD ["node", "dist/src/index.js"]
