feat(storefront): add middleware rule for profile-setup/address

--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -8,7 +8,7 @@
     "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 next dev --port 3000 --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --max-warnings 0",
+    "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
   "engines": {
