--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
 	"name": "workspace",
 	"private": true,
 	"scripts": {
-		"build": "turbo run build",
-		"dev": "turbo run dev",
+		"build": "turbo run build --filter=@workspace/storefront --filter=@workspace/server",
+		"dev": "turbo run dev --filter=@workspace/storefront --filter=@workspace/server",
 		"clean": "turbo run clean",
-		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
 		"lint": "turbo lint",
+		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
 		"build-server": "pnpm run --filter=@workspace/server build",
 		"start-server": "pnpm run --filter=@workspace/server start",
 		"build-storefront": "pnpm run --filter=@workspace/storefront build",
