feat(repo): add easy_pay shipping dimensions details

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,10 +9,15 @@
 		"start": "node ./dist/src/index.js",
 		"db": "npx drizzle-kit",
 		"db:build": "tsx ./src/database/index.ts",
+		"db:build:local": "dotenv -e .env.local -- tsx ./src/database/index.ts",
 		"db:check": "npx drizzle-kit check --config ./src/database/drizzle.config.ts",
+		"db:check:local": "dotenv -e .env.local -- npx drizzle-kit check --config ./src/database/drizzle.config.ts",
 		"db:generate": "npx drizzle-kit generate --config ./src/database/drizzle.config.ts",
+		"db:generate:local": "dotenv -e .env.local -- npx drizzle-kit generate --config ./src/database/drizzle.config.ts",
 		"db:migrate": "npx tsx ./src/database/migrate.ts",
+		"db:migrate:local": "dotenv -e .env.local -- npx drizzle-kit migrate --config ./src/database/drizzle.config.ts",
 		"db:push": "npx drizzle-kit push --config ./src/database/drizzle.config.ts",
+		"db:push:local": "dotenv -e .env.local -- npx drizzle-kit push --config ./src/database/drizzle.config.ts",
 		"db:studio": "npx drizzle-kit studio --config ./src/database/drizzle.config.ts",
 		"seed:categories": "npx tsx ./src/database/scripts/seeders/categories/index.ts",
 		"seed:countries": "npx tsx ./src/database/scripts/seeders/countries/index.ts",
