--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
 		"clean": "turbo run clean",
 		"lint": "turbo lint",
 		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
-		"build-server": "pnpm run --filter=@workspace/server build",
-		"start-server": "pnpm run --filter=@workspace/server start",
-		"build-storefront": "pnpm run --filter=@workspace/storefront build",
-		"start-storefront": "pnpm run --filter=@workspace/storefront start",
+		"prepare": "husky",
 		"dev-server": "pnpm run --filter=@workspace/server dev",
 		"dev-storefront": "pnpm run --filter=@workspace/storefront dev",
+		"build-server": "pnpm run --filter=@workspace/server build",
+		"build-storefront": "pnpm run --filter=@workspace/storefront build",
+		"start-storefront": "pnpm run --filter=@workspace/storefront start",
+		"start-server": "pnpm run --filter=@workspace/server start",
 		"db-push": "pnpm run --filter=@workspace/server db:push",
+		"db-push-local": "pnpm run --filter=@workspace/server db:push:local",
+		"db-generate": "pnpm run --filter=@workspace/server db:generate",
+		"db-generate-local": "pnpm run --filter=@workspace/server db:generate:local",
 		"seed-users": "pnpm run --filter=@workspace/server seed:users",
 		"seed-categories": "pnpm run --filter=@workspace/server seed:categories",
 		"seed-countries": "pnpm run --filter=@workspace/server seed:countries",
 		"seed-all": "bash seed-all.sh",
-		"clean-all": "bash clean-project.sh",
-		"prepare": "husky"
+		"clean-all": "bash clean-project.sh"
 	},
 	"engines": {
 		"node": ">=22.0.0",
