feat(repo): various update about shipments

--- a/apps/server/env.example
+++ b/apps/server/env.example
@@ -40,3 +40,6 @@ SMTP_PASS=
 # GITHUB ACTIONS WORKFLOW KEYS
 DAILY_ORDER_PROPOSALS_CHECK_SECRET_KEY=
 DAILY_ORDER_CHECK_SECRET_KEY=
+
+# Usefull only if you host on railway.com
+RAILWAY_DOCKERFILE_PATH="/apps/server/Dockerfile"
