--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
 		"drizzle-orm": "^0.43.1",
 		"drizzle-zod": "^0.7.1",
 		"hono": "^4.7.11",
-		"zod": "^3.25.0"
+		"zod": "^3.25.0",
+		"shippo": "^2.15.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.8.1",
