--- a/apps/server/env.example
+++ b/apps/server/env.example
@@ -1,37 +1,51 @@
+PROJECT_NAME=Tantovale
 NODE_ENV=development
 LOG_LEVEL=debug
-
 NEXT_PUBLIC_HONO_API_URL=http://localhost:4000
 
+# SERVER
 SERVER_HOSTNAME=localhost
 SERVER_PORT=4000
 
+# STOREFRONT
 STOREFRONT_HOSTNAME=localhost
 STOREFRONT_PORT=3000
 
+# DATABASE
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 POSTGRES_DB=tantovale_db
 
+# PAYMENT PROVIDER
+PAYMENT_PROVIDER_API_URL=https://dev.stage.trustap.com/api
+PAYMENT_PROVIDER_API_VERSION=v1
 PAYMENT_PROVIDER_SECRET_KEY=
+PAYMENT_PROVIDER_CLIENT_ID=
+PAYMENT_PROVIDER_CLIENT_SECRET=
 PAYMENT_PROVIDER_WEBHOOK_SECRET=
+PAYMENT_PROVIDER_PAY_PAGE_URL=https://actions.stage.trustap.com/online/transactions
+POST_PAYMENT_REDIRECT_URL=https://www.tantovale.it
 
+# SHIPPING
 SHIPPING_PROVIDER_SECRET_KEY=
 SHIPPING_PROVIDER_WEBHOOK_SECRET=
 
+# AUTH
 ACCESS_TOKEN_SECRET=your_access_token_secret
 REFRESH_TOKEN_SECRET=your_refresh_token_secret
 EMAIL_VERIFY_TOKEN_SECRET=your_email_token_secret
 RESET_TOKEN_SECRET=your_reset_token_secret
 COOKIE_SECRET=your_cookie_token_secret
 
+# AWS
 AWS_REGION=eu-central-1
 AWS_BUCKET_NAME=
 AWS_ACCESS_KEY=
 AWS_SECRET_ACCESS_KEY=
 
+# SMTP
 SMTP_HOST=
 SMTP_PORT=465
 SMTP_USER=
@@ -40,6 +54,11 @@ SMTP_PASS=
 # GITHUB ACTIONS WORKFLOW KEYS
 DAILY_ORDER_PROPOSALS_CHECK_SECRET_KEY=
 DAILY_ORDER_CHECK_SECRET_KEY=
+TRANSACTIONS_SYNC_SECRET_KEY=
+
+# TOLLERANCES
+PROPOSALS_HANDLING_TOLLERANCE_IN_HOURS=96
+ORDERS_PAYMENT_HANDLING_TOLLERANCE_IN_HOURS=48
 
 # Usefull only if you host on railway.com
 RAILWAY_DOCKERFILE_PATH="/apps/server/Dockerfile"
